# bevy_spectator

./: Cargo.toml  README.md
.github/workflows/: main.yml
examples/: 2d_scene.rs  3d_scene.rs  README.md  basic.rs  egui.rs
src/: egui.rs  lib.rs
