[package]
name = "bevy_spectator"
description = "A spectator camera plugin for Bevy"
version = "0.5.0"
edition = "2021"
authors = ["JonahPlusPlus <33059163+JonahPlusPlus@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/bevy_spectator"
homepage = "https://github.com/JonahPlusPlus/bevy_spectator"
repository = "https://github.com/JonahPlusPlus/bevy_spectator"
exclude = ["/examples/"]

[dependencies]
bevy = { version = "0.13.0", default-features = false }

[dev-dependencies]
bevy = { version = "0.13.0", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
  "x11",
  "ktx2",
  "zstd",
  "tonemapping_luts",
] }

[features]
default = ["init"]
init = []          # Enables automatically choosing a camera

[[example]]
name = "3d_scene"
path = "examples/3d_scene.rs"
