[package]
name = "bevy_spectator"
description = "A spectator camera plugin for Bevy"
version = "0.7.1"
edition = "2021"
authors = ["JonahPlusPlus <33059163+JonahPlusPlus@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/bevy_spectator"
homepage = "https://github.com/JonahPlusPlus/bevy_spectator"
repository = "https://github.com/JonahPlusPlus/bevy_spectator"
include = ["/src", "/examples", "/LICENSE*"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
  "bevy_window",
] }
bevy_egui = { version = "0.31", optional = true, default-features = false }

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_sprite",
  "bevy_window",
  "x11",
  "ktx2",
  "zstd",
  "tonemapping_luts",
] }
bevy_egui = { version = "0.31", default-features = false, features = [
  "render",
  "default_fonts",
] }

[features]
default = ["init"]
init = []                     # Enables automatically choosing a camera
bevy_egui = ["dep:bevy_egui"] # Enables skipping enabling spectator if egui wants focus


[[example]]
name = "egui"
path = "examples/egui.rs"
required-features = ["bevy_egui"]